Remove hover on mobiles, fix route change scroll top bug

--- a/components/Navigation/NavigationItem/NavigationItem.module.scss
+++ b/components/Navigation/NavigationItem/NavigationItem.module.scss
@@ -53,15 +53,17 @@
 		transition: 0.2s ease-in-out;
 	}
 
-	&:hover {
-		span {
-			&::after {
+	@include min(981px) {
+		&:hover {
+			span {
+				&::after {
+					opacity: 1;
+				}
+			}
+
+			p {
 				opacity: 1;
 			}
-		}
-
-		p {
-			opacity: 1;
 		}
 	}
 
